# lates-may-23

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: index.html
docs/styles/: style.css
src/: lates.py
src/styles/: style.css
src/templates/: index.html
